--- a/SpaceInvaders/style.css
+++ b/SpaceInvaders/style.css
@@ -69,8 +69,8 @@ button#restart{
     margin-right: 10px;
 }
 .controls .left .leftBtn,.controls .left .rightBtn{
-/*     font-size: 30px; */
-/*     padding: 0px 30px; */
+    font-size: 30px;
+    padding: 0px 30px;
     cursor: pointer;
 }
 .controls .right button{
