--- a/CopyText/style.css
+++ b/CopyText/style.css
@@ -16,6 +16,7 @@ body{
     width: 70px;
     font-size: 20px;
     margin-bottom: 10px;
+    cursor:pointer;
 }
 .content textarea{
     outline: none;
